--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ add_message_files(
  )
 
 catkin_package(
-    INCLUDE_DIRS include
+    #INCLUDE_DIRS include
     CATKIN_DEPENDS 
     message_runtime
 )
